Reader: Fix Follow Stream Recomended Posts Spacing
Ref: #11356

--- a/client/blocks/reader-related-card-v2/style.scss
+++ b/client/blocks/reader-related-card-v2/style.scss
@@ -316,7 +316,7 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 		}
 
 		.reader-related-card-v2__featured-image {
-			margin: 4px 0 19px;
+			margin: 0 0 19px;
 		}
 	}
 
